# pm

./: .gitignore  .gitleaks.toml  AGENTS.md  CHARTER.md  CONTRIBUTING.md  Cargo.toml  DOD.md  README.md
.github/workflows/: ci.yml
scripts/: dashboard.html  demo.css  detail.html  record_demo.py
src/: api.rs  autoscore.rs  charter.rs  cli.rs  cli_core.rs  discovery.rs  dod.rs  domain.rs  lib.rs  main.rs  milestones.rs  naming.rs  next_task.rs  research.rs  roadmap.rs  scanner.rs  similarity.rs  standards.rs  store.rs
src/adapters/: analytics.rs  github.rs  mod.rs  research.rs  steam.rs
src/scoring/: calibrate.rs  distinctness.rs  leverage.rs  mod.rs  velocity.rs
tests/: calibration.rs  cli_core_auto_score.rs  cli_dedupe.rs  cli_nonrepo_inbox.rs  cli_smoke.rs  cli_status_discovery.rs  cli_unscore.rs  dedupe_discovery.rs  discovery.rs  naming.rs  nonrepo_inbox.rs  research_fallback.rs  similarity.rs  standards_autofix.rs  standards_config.rs  standards_discovery.rs  standards_report.rs  standards_scoring.rs  store_duplicates.rs  store_path_lookup.rs  store_unscore.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css
web/src/lib/: PhaseChart.svelte  PortfolioCharts.svelte  ProjectCard.svelte  ProjectIcon.svelte  RadarChart.svelte  StatsCards.svelte  api.ts  icons.ts  types.ts
web/src/views/: Dashboard.svelte  Inbox.svelte  Next.svelte  Parked.svelte  Pipeline.svelte  ProjectDetail.svelte
