[package]
name = "pm"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.5", features = ["fs"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
